Nice little refactor
Refactored a bunch of stuff to improve readability and to make requests to and from the DB a little more contractual using GetResponse and PutResponse.

Still have issues with reading/writing to file and compression that need to be sorted out.

Updated README

--- a/AtomKV.Core/AtomKV.Core.fsproj
+++ b/AtomKV.Core/AtomKV.Core.fsproj
@@ -6,23 +6,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Types\DocumentSerialization.fs" />
+    <Compile Include="Types\AtomResponse.fs" />
     <Compile Include="Types\KeySpace.fs" />
     <Compile Include="Types\Compression.fs" />
-    <Compile Include="Types\ServiceBundle.fs" />
     <Compile Include="Types\Atom.fs" />
     <Compile Include="GZipCompression.fs" />
     <Compile Include="JsonDocumentSerialization.fs" />
     <Compile Include="AtomConstants.fs" />
     <Compile Include="AtomKeySpaceV1.fs" />
-    <Compile Include="AtomBytes.fs" />
+    <Compile Include="AtomFile.fs" />
+    <Compile Include="AtomIndex.fs" />
+    <Compile Include="AtomDocument.fs" />
     <Compile Include="AtomPage.fs" />
     <Compile Include="AtomTable.fs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="LruCacheNet" Version="1.2.0" />
-    <PackageReference Include="SimpleBase" Version="4.0.0" />
+    <Compile Include="AtomDefaultInitialization.fs" />
   </ItemGroup>
 
   <ItemGroup>
